tests/tutorial/wrapTutorial.h

// splicer begin C_declarations
// splicer end C_declarations

void TUT_function1();
double TUT_function2(double arg1, int arg2);